likeFollow의 bot detection문제 해결완료

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.4.1",
     "@aws-sdk/s3-request-presigner": "^3.4.1",
+    "korean-name-generator": "^1.0.4",
     "mysql2": "^2.2.5",
     "prompt-sync": "^4.2.0",
     "puppeteer": "^5.5.0",
     "puppeteer-extra": "^3.1.16",
-    "puppeteer-extra-plugin-stealth": "^2.6.6"
+    "puppeteer-extra-plugin-stealth": "^2.7.4"
   },
   "devDependencies": {},
   "scripts": {
